@@ -5,6 +5,7 @@
 === 1.0.13 ===
 * Moved status codes to separate header.
 * Renamed status codes to not to clash with lsp-common-lib.
+* Added 'suppress' argument to output only necessary information.
 
 === 1.0.12 ===
 * Removed lsp-common-lib from dependencies (breaking circular dependencies).
